# fftwpp

./: .gitignore  Array.cc  Array.h  CMakeLists.txt  Complex.h  MAKEDOCS  Makefile  README  README.md  TODO  align.h  autiming  biconv.cc  biconv2.cc  cconv.cc  cconv2.cc  cconv3.cc  cmult-sse2.h  comp.asy  conv2.cc  conv3.cc  convolution.cc  convolution.h  convolve.cc  convolve.h  cpuPrimer.h  distclean.cmake  error  error.asy  example0r.cc  example1r.cc  example2.cc  example2r.cc  example3.cc  exampleconv.cc  explicit.cc  explicit.h  fftw++.cc  fftw++.h  getopt.h  (+13 more)
examples/: CMakeLists.txt  Makefile  example0.cc  example0m.cc  example0mr.cc  example0r.cc  example1.cc  example1r.cc  example2.cc  example2r.cc  example3.cc  example3r.cc  examplecconv.cc  examplecconv2.cc  examplecconv3.cc  examplecconvfull.cc  examplecconvsame.cc  exampleconv.cc  exampleconv2.cc  exampleconv3.cc  exampleconvh.cc  exampleconvh2.cc  exampleconvh3.cc  exampleconvr.cc  exampleconvr2.cc  exampleconvr3.cc  examplepcconv.cc  examplepcconv2.cc  examplepcconv3.cc  exampletranspose.cc  optimal.asy  optimal.cc
mpi/: Makefile  accumulate.cc  accumulatexy.cc  accumulateyz.cc  cconv2.cc  cconv3.cc  cfft2.cc  cfft3.cc  conv2.cc  conv3.cc  fft2.cc  fft2r.cc  fft3.cc  fft3r.cc  fftw++.cc  gather.cc  gatherxy.cc  gatheryz.cc  hybrid.asy  ignorance.sh  mpiconvolution.cc  mpiconvolution.h  mpiconvolve.cc  mpiconvolve.h  mpifftw++.cc  mpifftw++.h  mpigroup.h  mpioptions.h  mpitranspose.cc  mpitranspose.h  mpiutils.cc  mpiutils.h  rcfft2.cc  testaccumulate.py  testcconv2.py  testcconv3.py  testconv2.py  testconv3.py  testconvolution.py  testfft.py  (+14 more)
mpi/examples/: Makefile  fft2r.cc  fft2rconv.cc  fft3rconv.cc
mpi/explicit/: Makefile  cconv2.cc  cconv3.cc  cfft2.cc  cfft3.cc  conv2.cc  exmpiutils.cc  exmpiutils.h  fft2.cc  fft2r.cc  fft3.cc  fft3r.cc  transpose.cc
mpi/fftw/: CMakeLists.txt  Makefile  cconv2.cc  cconv3.cc  fft2.cc  fft2r.cc  fft3.cc  transpose.cc
mpi/tests/: CMakeLists.txt  Makefile  cconv2.cc  cconv3.cc  conv2.cc  conv3.cc  fft2.cc  fft2r.cc  fft3.cc  fft3r.cc  gather.cc  gatherxy.cc  gatheryz.cc  hybrid.asy  hybridconv2.cc  hybridconv3.cc  hybridconvh2.cc  hybridconvh3.cc  hybridconvr2.cc  hybridconvr3.cc  testcconv2.py  testcconv3.py  testconv2.py  testconv3.py  testconvolution.py  testfft.py  testfft2.py  testfft2r.py  testfft3.py  testfft3r.py  testgather.py  tests.py  testtranspose.py  testutils.py  timing.asy  transpose.cc  unittests.py
mpi/wrappers/: Makefile  cexample.c  cmpifftw++.cc  cmpifftw++.h
patches/: fftw-3.3.8-alignment.patch
tests/: CMakeLists.txt  HybridParameters.py  Makefile  OptimalValues.py  accuracy.asy  accuracy.py  alltime  alltime.py  averagespeedup.py  c2cfft1.cc  c2cfft2.cc  cconv.cc  cconv2.cc  cconv3.cc  checkerror.py  conv.cc  conv2.cc  conv3.cc  convolve.cc  convolve.h  direct.cc  direct.h  directTest.cc  directerror  directerror.py  error  error.asy  error.py  errorunittest.py  explicit.cc  explicit.h  fft1.cc  fft1r.cc  fft2.cc  fft2r.cc  fft3.cc  fft3r.cc  final_m_values.npy  final_time_values.npy  forwardRoutines.yaml  (+56 more)
trunk/fftw++/: Array.cc  Array.h  Complex.h  Makefile  README  TODO  biconv.cc  cconv.cc  cconv2.cc  cconv3.cc  cmult-sse2.h  comp.asy  conv.cc  conv2.cc  conv3.cc  convolution.cc  convolution.h  error  example0.cc  example0r.cc  example1.cc  example1r.cc  example2.cc  example3.cc  example3r.cc  exampleconv.cc  explicit.cc  explicit.h  fftw++.cc  fftw++.doxycfg  fftw++.h  fftwtranspose.cc  tconv.cc  tconv2.cc  timing  timing.asy  utils.h
trunk/fftw++/examples/: Makefile  example0.cc  example0m.cc  example0mr.cc  example0r.cc  example1.cc  example1r.cc  example2.cc  example2r.cc  example3.cc  example3r.cc  examplecconv.cc  examplecconv2.cc  exampleconv.cc  exampleconv2.cc  exampleconv3.cc  examplepcconv2.cc  examplepcconv3.cc
trunk/fftw++/mpi/: Makefile  cconv2.cc  cconv3.cc  cfft2.cc  cfft3.cc  conv2.cc  conv3.cc  fft2.cc  fft3.cc  fftw++.cc  hybrid.asy  mpiconvolution.cc  mpiconvolution.h  mpifftw++.cc  mpifftw++.h  mpitranspose.cc  mpitranspose.h  mpiutils.cc  mpiutils.h  rcfft2.cc  testmpi.cc  timing.asy  timing.py  transpose.cc
trunk/fftw++/mpi/explicit/: Makefile  cconv2.cc  cconv3.cc  cfft2.cc  cfft3.cc  exmpiutils.cc  exmpiutils.h
trunk/fftw++/mpi/fftw/: Makefile  cconv2.cc  cconv3.cc
trunk/fftw++/tests/: Makefile  alltime  alltime.py  c2cfft2.cc  c2cfftm.cc  cconv.cc  cconv2.cc  cconv3.cc  checkerror.py  comp.asy  conv.cc  conv2.cc  conv3.cc  direct.cc  direct.h  directerror.py  error  error.asy  error.py  errorunittest.py  explicit.cc  fft2.cc  fft2r.cc  fftwpputils.h  pcconv.cc  pcconv2.cc  pcconv3.cc  ratio.asy  tconv.cc  tconv2.cc  timing  timing.asy  timing.h  timing.py  utils.h
trunk/fftw++/wrappers/: Makefile  cexample.c  cfftw++.cc  cfftw++.h  chash.cc  chash.h  fexample.f90  ffftwpp.f90  fftwpp.f90  fftwpp.py  pexample.py  test.py
wrappers/: CMakeLists.txt  HybridConvolution.h  Makefile  cexample.c  cfftw++.cc  cfftw++.h  chash.cc  chash.h  example.py  fexample.f90  ffftwpp.f90  fftwpp.f90  fftwpp.py  fhash.f90  pexample.py  test.py  tests.py
